opam-version: "2.0"
name: "bitv"
maintainer: "filliatr@lri.fr"
authors: "Jean-Christophe Filliâtre"
license: "LGPL v2"
homepage: "https://www.lri.fr/~filliatr/software.en.html"
bug-reports: "https://github.com/backtracking/bitv/issues"
depends: [
  "ocaml"
  "dune" {>= "2.0.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/backtracking/bitv.git"
