(library
 (public_name bitv)
 (flags
   (:standard -w -32))
 (modules bitv))

(library
 (public_name bitv.string)
 (name bitv_string)
 (modules bitv_string)
 (libraries bitv))

(test
 (name test)
 (modules test)
 (libraries bitv bitv.string))

(test
 (name sieve)
 (modules sieve)
 (libraries bitv bitv.string))

(executable
 (name bench)
 (modules bench)
 (promote (until-clean))
 (libraries bitv))
